[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "BITMART TEST"
version = "1"
description = "Bitmart Test"
authors = [{ name = "JJ.py", email = "marklocklear07@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "requests==2.23.0",
    "urllib3==1.21.1",
    "utils==1.0.1",
    "websockets>=9.1",
    "pytest==6.2.1",
    "pydantic==1.10.2",
    "talib==0.2.0",
    "bitmart"
]
[project.urls]
Homepage = "https://github.com/Locklearboy07"

